# BGT2025-pratybos

pratybos/hash_funkcija/: .gitignore  CMakeLists.txt  Hasher.cpp  Hasher.h  README.md  TODO.md  draw_konstitucija_chart.py  main.cpp  parsing_helper_funcs.cpp  parsing_helper_funcs.h  pyproject.toml
pratybos/hash_funkcija/bench/: bench_gen.cpp
pratybos/hash_funkcija/include/: FileRead.h  FileWrite.h  Hasher.h  Timer.h  constants.h  draw.h  parsing_helper_funcs.h  test_file_generator.h
pratybos/hash_funkcija/io/: FileRead.cpp  FileRead.h
pratybos/hash_funkcija/src/cli/: draw_chart.cpp  parsing_helper_funcs.cpp
pratybos/hash_funkcija/src/crypto/: Hasher.cpp
pratybos/hash_funkcija/src/file_gen/: test_file_generator.cpp
pratybos/hash_funkcija/src/io/: FileRead.cpp
pratybos/hash_funkcija/tests/: CMakeLists.txt  benchmark.cpp  hash_test.cpp  hasher_test.cpp
